--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 #A {
-    background-image: url("../EBBS/Kalmar.jpg");
+    background-image: url("Kalmar.jpg");
     background-size: 100%;
     background-position-y: 55%;
     height: 99%;
